--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,10 @@ Gnuk NEWS - User visible changes
 
 * Major changes in Gnuk 1.2.3
 
-  Released 2017-02-XX, by NIIBE Yutaka
+  Released 2017-02-02, by NIIBE Yutaka
+
+** ECC key generation on the device
+Bug fixed.
 
 ** Upgrade of Chopstx
 We use Chopstx 1.3.
