--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 Gnuk - An Implementation of USB Cryptographic Token for GnuPG
 
-							  Version 1.2.2
-							     2016-10-15
+							  Version 1.2.3
+							     2017-02-02
 							   Niibe Yutaka
 				      Free Software Initiative of Japan
 
 Release Notes
 =============
 
-This is the release of Gnuk, version 1.2.2, which has major
+This is the release of Gnuk, version 1.2.3, which has major
 incompatible changes to Gnuk 1.0.x.  Specifically, it now supports
 overriding key import, but importing keys (or generating keys) results
 password reset.  Please update your documentation for Gnuk Token, so
@@ -47,7 +47,7 @@ FAQ
 
 Q0: How Gnuk USB Token is superior than other solutions (OpenPGP
     card 2.0, YubiKey, etc.) ?
-    http://www.g10code.de/p-card.html
+    https://www.g10code.de/p-card.html
     https://www.yubico.com/
 A0: Good points of Gnuk are:
     * If you have skill of electronics and like DIY, you can build
@@ -77,12 +77,12 @@ A3: Orthodox choice is Olimex STM32-H103.
     choice for experiment.
 
 Q4: What's version of GnuPG are you using?
-A4: In Debian GNU/Linux system, I use GnuPG modern 2.1.13 in
-    experimental.
+A4: In Debian GNU/Linux system, I use GnuPG modern 2.1.18 in
+    unstable.
 
 Q5: What's version of pcscd and libccid are you using?
 A5: I don't use them, pcscd and libccid are optional, you can use Gnuk
-    without them.
+    Token without them.
     I tested pcscd 1.5.5-4 and libccid 1.3.11-2 which were in Debian
     squeeze.
 
@@ -587,14 +587,14 @@ You can browse at: http://git.gniibe.org/gitweb?p=gnuk/gnuk.git;a=summary
 
 I put Chopstx as a submodule of Git.  Please do this:
 
-  $ git submodule init
-  $ git submodule update
+    $ git submodule update --init
 
-We have migrated from ChibiOS/RT to Chopstx in Gnuk 1.1.  If you have
-old code of ChibiOS/RT, you need:
+Gnuk 1.0 uses ChibiOS/RT, and then, we have migrated from to Chopstx
+in the development phase of Gnuk 1.1.  If you have old code of
+ChibiOS/RT, you need:
 
-    Edit .git/config to remove chibios reference
-    git rm --cached chibios
+    Edit .git/config to remove chibios reference and
+    $ git rm --cached chibios
 
 
 Information on the Web
@@ -604,7 +604,7 @@ Please visit: http://www.fsij.org/gnuk/
 
 Please see the FST-01 support pages:
 
-    http://www.gniibe.org/category/fst-01.html
+    https://www.gniibe.org/category/fst-01.html
 
 Please consider to join Gnuk-users mailing list:
 
