--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2017-04-27  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/flash.c (flash_init): Return address of end of data object.
+	* src/openpgp.c (gpg_init): Get address of end of data object.
+	* src/openpgp-do.c (gpg_data_scan): Check the end address.
+
 2017-02-02  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* VERSION: 1.2.3.
