--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2017-05-12  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* VERSION: 1.2.4.
+
 2017-04-28  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/mcu-stm32f103.c: New.
