--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2017-07-18  Anthony Romano <anthony.romano@coreos.com>
 
+	* src/mod.c (mod_reduce): Clean up unused code.
+
+2017-07-18  Anthony Romano <anthony.romano@coreos.com>
+
 	* src/call-rsa.c (modulus_calc): Free modulus on error.
 	(rsa_genkey): Remove bogus check, and call chopstx_cleanup_pop
 	with 1 to release p_q_modulus on error.  Assign NULL to clp.arg
