Support building with docker.
Signed-off-by: Anthony Romano <anthony.romano@coreos.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2017-07-18  Anthony Romano <anthony.romano@coreos.com>
 
+	* docker: New.
+
+2017-07-18  Anthony Romano <anthony.romano@coreos.com>
+
 	* src/main.c (MEMORY_SIZE, MEM_HEAD_IS_CORRUPT, MEM_HEAD_CHECK):
 	New.
 	(gnuk_malloc, gnuk_free): Add calls to MEM_HEAD_CHECK.
