--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2017-07-18  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* Update chopstx (with USBIP emulation).
+
 2017-05-12  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* VERSION: 1.2.4.
