Fix accessing garbage on error path.
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>
Reported-by: Anthony Romano <anthony.romano@coreos.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2017-07-19  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* polarssl/library/bignum.c (mpi_exp_mod): Call mpi_grow for X
+	after the initialization of RR.
+
 2017-07-18  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/configure: Bark when not git.
