Initialize TMP to avoid confusion by static analysis.
--

The computation using TMP is keeping it constant-time only, but
it is better not to confuse static analysis.

Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2017-07-19  NIIBE Yutaka  <gniibe@fsij.org>
 
+	* src/mod.c (mod_inv): Clear TMP.
+
 	* src/configure (REVISION): Generate even when no git.
 
 	* polarssl/library/bignum.c (mpi_exp_mod): Call mpi_grow for X
