Erase CERTDO on terminate.
When both certdo and lifecycle support are enabled, flash_terminate
neglected to erase the certdo pages.  It now does so.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2017-08-02  Jeremy Drake  <jeremydrake+gnuk@eacceleration.com>
+
+	* src/flash.c (flash_terminate): Erase Certificate DO, too.
+
 2017-08-01  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/openpgp.c (FILE_CARD_TERMINATED_OPENPGP): Remove.
