Allow compile-time override of detected flash size.
On the STM32F103C8, as used in the "blue pill" boards, it has been
determined that, despite these only officially having 64KiB flash, it is
possible to actually use 128KiB of flash.

This commit allows for a preprocessor define
STM32F103_OVERRIDE_FLASH_SIZE which, when set, is used as the size of
flash in KiB instead of reading it from the FLASH_SIZE_REG.

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,10 @@ Anthony Romano:
 	src/main.c
 	src/mod.c
 
+Jeremy Drake:
+    Modified:
+	regnual/regnual.c
+
 Kaz Kojima:
     Added STM32 Primer2 support.
 
