--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2017-08-11  NIIBE Yutaka  <gniibe@fsij.org>
 
+	* src/gnuk.ld.in (__process3_stack_size__): Tweak the size.
+
 	* src/configure: Define STM32F103_OVERRIDE_FLASH_SIZE_KB for
 	BULE_PILL.
 
