--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2017-09-29  NIIBE Yutaka  <gniibe@fsij.org>
 
+	* src/openpgp.c (modify_binary): Fix for 64-bit machine.
+	* src/openpgp-do.c (encrypt, decrypt): Likewise.
+	(gpg_data_scan): Likewise.
+	(gpg_do_chks_prvkey): Fix error return path.
+
 	* src/stack-def.h: New.
 
 	* src/gnuk.ld.in: Remove stack definitions.
