--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2017-11-15  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/usb-ccid.c (usb_event_handle): Allow sleep on suspend.
+
+	* src/usb_ctrl.c (usb_device_reset): Fix device state.
+
 2017-11-14  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/usb-ccid.c (ccid_usb_reset): Remove
