--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2017-11-17  NIIBE Yutaka  <gniibe@fsij.org>
 
+	* regnual/regnual.c (calc_crc32): Enable CRC module.
+
 	* src/neug.c (crc32_rv_stop): New.
 	(neug_fini): Call crc32_rv_stop.
 
