--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,13 @@
+2017-11-24  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* chopstx: Update to 1.6.
+
 2017-11-17  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/stack-def.h (SIZE_0): Decrease.
 
 	* src/main.c (emit_led, display_status_code, main): Use
 	chopstx_poll instead of eventflag_wait_timeout.
-
 
 2017-11-17  NIIBE Yutaka  <gniibe@fsij.org>
 
