--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ Gnuk NEWS - User visible changes
 
 * Major changes in Gnuk 1.2.7
 
-  Released 2017-11-XX, by NIIBE Yutaka
+  Released 2017-11-26, by NIIBE Yutaka
 
 ** reGNUal
 reGNUal enables CRC module by itself.
