--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2017-11-26  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* VERSION: 1.2.7.
+
 2017-11-24  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* regnual/regnual.c (calc_crc32): Enable CRC module fix.
