--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 Gnuk - An Implementation of USB Cryptographic Token for GnuPG
 
-							  Version 1.2.6
-							     2017-10-11
+							  Version 1.2.7
+							     2017-11-26
 							   Niibe Yutaka
 				      Free Software Initiative of Japan
 
 Release Notes
 =============
 
-This is the release of Gnuk, version 1.2.6, which has major
+This is the release of Gnuk, version 1.2.7, which has major
 incompatible changes to Gnuk 1.0.x.  Specifically, it now supports
 overriding key import, but importing keys (or generating keys) results
 password reset.  Also, you need to import private keys before changing
@@ -24,11 +24,13 @@ It also supports RSA-4096, but users should know that it takes more
 than 8 seconds to sign/decrypt.  Key generation of RSA-4096 just fails,
 because the device doesn't have enough memory.
 
-With this release, you can test how Gnuk Token works on GNU/Linux,
-without real hardware, by USBIP emulation (--target=GNU_LINUX).
-Please note that this emulation is intended only for testing.  When
-Gnuk does crypto computation on host, it is vulnerable by side channel
-attacks.
+In this release, experimental KDF-DO support is added.  To use the
+feature, you need to build/install experimental branch of GnuPG by
+yourself:
+
+    https://dev.gnupg.org/source/gnupg/history/gniibe%252Fscd-kdf-support/
+
+And manually prepare the KDF-DO on your token.
 
 
 What's Gnuk?
