--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-01-19  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* chopstx: Update to 1.8.
+
 2018-01-18  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/neug.c: Update from NeuG.
