--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ Gnuk NEWS - User visible changes
 
 * Major changes in Gnuk 1.2.8
 
-  Released 2018-01-2X, by NIIBE Yutaka
+  Released 2018-01-23, by NIIBE Yutaka
 
 ** No inclusion of VID:PID in gnuk.elf
 
@@ -16,12 +16,12 @@ gnuk-vidpid.elf and we can check if it is reproducible or not.
 Now, Gnuk checks length of passphrase if it's too short when
 changing passphrase.
 
-** Remove possible access with BY_ADMIN (to flash ROM data)
+** Remove unused DEK with BY_ADMIN
 
-For admin-less mode, access by OPENPGP_CARD_INITIAL_PW3 remained on
-flash ROM.  This could be considered a backdoor, if some other person
-had or kept access to the flash ROM.  Now, the entry is cleared by
-zero when the token is set to admin-less mode.
+For admin-less mode, DEK by OPENPGP_CARD_INITIAL_PW3 remained on flash
+ROM.  This could be considered a backdoor, if some other person had or
+kept access to the flash ROM, cheating a user.  Now, the DEK is
+cleared by zero when the token is set to admin-less mode.
 
 ** Upgrade of Chopstx
 We use Chopstx 1.8.
