--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 Gnuk - An Implementation of USB Cryptographic Token for GnuPG
 
-							  Version 1.2.7
-							     2017-11-26
+							  Version 1.2.8
+							     2018-01-23
 							   Niibe Yutaka
 				      Free Software Initiative of Japan
 
 Release Notes
 =============
 
-This is the release of Gnuk, version 1.2.7, which has major
+This is the release of Gnuk, version 1.2.8, which has major
 incompatible changes to Gnuk 1.0.x.  Specifically, it now supports
 overriding key import, but importing keys (or generating keys) results
 password reset.  Also, you need to import private keys before changing
@@ -24,13 +24,10 @@ It also supports RSA-4096, but users should know that it takes more
 than 8 seconds to sign/decrypt.  Key generation of RSA-4096 just fails,
 because the device doesn't have enough memory.
 
-In this release, experimental KDF-DO support is added.  To use the
-feature, you need to build/install experimental branch of GnuPG by
-yourself:
-
-    https://dev.gnupg.org/source/gnupg/history/gniibe%252Fscd-kdf-support/
-
-And manually prepare the KDF-DO on your token.
+It supports new KDF-DO feature.  To use the feature, you need to use
+newer GnuPG (forthcoming 2.2.5 or later).  And you need to manually
+prepare the KDF-DO on your token.  Please note that this is
+experimental.  Better way to prepare KDF-DO will be expected.
 
 
 What's Gnuk?
@@ -408,6 +405,10 @@ Then, type:
 
 Then, we will have "gnuk.elf" under src/build directory.
 
+Next, we can get the final image by running following command.
+
+  $ make build/gnuk-vidpid.elf
+
 
 How to install
 ==============
@@ -416,11 +417,11 @@ Olimex STM32-H103 board
 -----------------------
 
 If you are using Olimex JTAG-Tiny, type following to invoke OpenOCD
-and write "gnuk.elf" to Flash ROM:
+and write "gnuk-vidpid.elf" to Flash ROM:
 
   $ openocd -f interface/ftdi/olimex-jtag-tiny.cfg \
             -f board/olimex_stm32_h103.cfg \
-            -c "program build/gnuk.elf verify reset exit"
+            -c "program build/gnuk-vidpid.elf verify reset exit"
 
 Command invocation is assumed in src/ directory.
 
@@ -433,7 +434,7 @@ If you are using Flying Stone Tiny 01, you need a SWD writer.
 OpenOCD 0.9.0 now supports ST-Link/V2.  We can use it like:
 
   $ openocd -f interface/stlink-v2.cfg -f target/stm32f1x.cfg \
-            -c "program build/gnuk.elf verify reset exit"
+            -c "program build/gnuk-vidpid.elf verify reset exit"
 
 
 
@@ -444,7 +445,7 @@ Reset the board with "USER" switch pushed.  Type following to write
 to flash:
 
   # cd ../tool
-  # ./dfuse.py ../src/build/gnuk.hex
+  # ./dfuse.py ../src/build/gnuk-vidpid.hex
 
 Then, reset the board.
 
