--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,18 @@
 Gnuk NEWS - User visible changes
 
+* Major changes in Gnuk 1.2.9
+
+  Released 2018-03-31, by NIIBE Yutaka
+
+** Add "single-salt" support for KDF-DO
+With KDF-DO, "admin-less" mode didn't work well.  With new feature of
+"single-salt" support, we can use "admin-less" mode with KDF-DO.
+
+** factory-reset deletes all upgrade public keys
+By card-edit/factory-reset by GnuPG, it deletes all upgrade public
+keys, now.
+
+
 * Major changes in Gnuk 1.2.8
 
   Released 2018-01-23, by NIIBE Yutaka
