--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 Gnuk - An Implementation of USB Cryptographic Token for GnuPG
 
-							  Version 1.2.8
-							     2018-01-23
+							  Version 1.2.9
+							     2018-03-31
 							   Niibe Yutaka
 				      Free Software Initiative of Japan
 
 Release Notes
 =============
 
-This is the release of Gnuk, version 1.2.8, which has major
+This is the release of Gnuk, version 1.2.9, which has major
 incompatible changes to Gnuk 1.0.x.  Specifically, it now supports
 overriding key import, but importing keys (or generating keys) results
 password reset.  Also, you need to import private keys before changing
@@ -25,9 +25,9 @@ than 8 seconds to sign/decrypt.  Key generation of RSA-4096 just fails,
 because the device doesn't have enough memory.
 
 It supports new KDF-DO feature.  To use the feature, you need to use
-newer GnuPG (forthcoming 2.2.5 or later).  And you need to manually
+newer GnuPG (forthcoming 2.2.6 or later).  And you need to manually
 prepare the KDF-DO on your token.  Please note that this is
-experimental.  Better way to prepare KDF-DO will be expected.
+experimental.  GnuPG 2.2.6 will include KDF-DO setup.
 
 
 What's Gnuk?
