--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2018-04-04  NIIBE Yutaka  <gniibe@fsij.org>
 
+	* tests: Add more tests, key generation and KDF support.
+
 	* src/openpgp.c (cmd_reset_user_password): Check length of
 	new passphrase.
 
