--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2018-04-26  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/usb-ccid.c (usb_event_handle): Ignore sprious "done".
+
+	* src/configure (MHZ, def_mhz): New.
+
 2018-04-05  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* VERSION: 1.2.9.
