--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2018-04-26  NIIBE Yutaka  <gniibe@fsij.org>
 
-	* src/usb-ccid.c (usb_event_handle): Ignore sprious "done".
+	* src/usb_ctrl.c (usb_device_reset): Don't stop the endpoints.
 
 	* src/configure (MHZ, def_mhz): New.
 
