--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-05-10  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* chopstx: Update to 1.9.
+
 2018-04-26  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/usb_ctrl.c (usb_device_reset): Don't stop the endpoints.
